# Tether

./: .gitattributes  .gitignore  Cargo.toml  README.md
crates/tether-client/: Cargo.toml
crates/tether-client/src/: main.rs
crates/tether-client/tests/: attach_reconnect_test.rs
crates/tether-server/: Cargo.toml
crates/tether-server/assets/shell-integration/bash/: tether-integration.bash  tether.bashrc
crates/tether-server/assets/shell-integration/codex/: hooks.json
crates/tether-server/assets/shell-integration/zsh/: .zshrc  tether-integration.zsh
crates/tether-server/assets/terminfo/: xterm-ghostty.src
crates/tether-server/src/: attention.rs  auth.rs  config.rs  lib.rs  main.rs  server.rs  ssh_config.rs  state.rs  test_support.rs
crates/tether-server/src/api/: completions.rs  groups.rs  mod.rs  remote.rs  server_info.rs  sessions.rs  ssh.rs
crates/tether-server/src/persistence/: mod.rs  scrollback.rs  store.rs
crates/tether-server/src/pty/: anti_flicker.rs  manager.rs  mod.rs  osc_parser.rs  process_monitor.rs  semantic_prompt_parser.rs  session.rs
crates/tether-server/src/remote/: client.rs  deploy.rs  foreground.rs  manager.rs  mod.rs  sync.rs  tunnel.rs
crates/tether-server/src/ws/: handler.rs  protocol.rs
crates/tether-server/tests/: api_test.rs  completion_test.rs  osc_detection_test.rs  remote_routing_test.rs  scrollback_lazy_loading_test.rs  server_startup_test.rs  sessions_api_test.rs  ssh_git_branch_test.rs  ssh_reconnect_test.rs  ssh_session_test.rs  terminal_env_test.rs  ws_events_test.rs
demos/demo1_link/: build.sh  demo1  main.swift
demos/demo2_app/: AppTest.swift  build.sh  demo2
demos/demo3_nsview/: AppDelegate.swift  GhosttyApp.swift  GhosttyNSView.swift  build.sh  demo3
flutter_app/: README.md  pubspec.yaml
flutter_app/lib/: main.dart
flutter_app/macos/: Podfile
flutter_app/test/: api_service_test.dart  attention_ack_failure_test.dart  attention_bell_test.dart  dead_local_session_ui_test.dart  group_dialog_test.dart  home_screen_font_zoom_test.dart  home_screen_project_sync_test.dart  home_screen_shortcut_test.dart  mobile_terminal_controls_test.dart  modifier_consumed_on_failed_send_test.dart  native_backend_test.dart  project_status_summary_test.dart  server_provider_attention_test.dart  widget_test.dart  (+26 more)
scripts/: build-android.sh  build-mac.sh  build_libghostty.sh  run_macos_ui_test.sh
(+104 files in other folders)
