[package]
name = "tether-client"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "tether-client"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
url = "2"
libc = "0.2"
