[package]
name = "tether-server"
version = "0.1.1"
edition = "2021"

[lib]
name = "tether_server"
path = "src/lib.rs"

[[bin]]
name = "tether-server"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace", "set-header"] }
tokio = { version = "1", features = ["full"] }

# PTY
portable-pty = "0.9"
libc = "0.2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
base64 = "0.22"

# Persistence
rusqlite = { version = "0.32", features = ["bundled"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
tokio-util = "0.7"
futures = "0.3"
bytes = "1"
dashmap = "6"
anyhow = "1"
shellexpand = "3"
glob = "0.3"

# HTTP proxy to tunnel port (rustls avoids openssl-sys cross-compile issues)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# WS client proxy
tokio-tungstenite = "0.24"

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
